<?xml version="1.0" encoding="utf-8"?>
<resources>
    請輸入菜餚清單
    <string name="Treehint">請輸入菜餚清單</string>
    <string name="app_name">ShopEasy</string>
    <string name="search_hint">請輸入菜餚清單</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Map">Map</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="header_hint_str">狀態清單</string>
    <string name="member_detail">會員資料</string>
    <string name="my_favorite">菜單管理</string>
    <string name="history">購物紀錄</string>
    <string name="product_list">購物清單</string>
    <string name="cook_book">食譜</string>
    <string name="youtube">影音教學</string>
    <string name="aboutus">關於我們</string>
    <string name="toolbar_member">會員清單</string>
    <string name="mission_cooking">流程購物</string>
    <string name="mission_project">商品需求</string>
    <string name="point_cooking">購買食材</string>
    <string name="point_project">購買商品</string>
    <string name="Leave">再按一次返回鍵離開</string>
    <string name="select_item">已選擇:</string>


</resources>
