<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/planet_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sub_fourth_fragment"
            android:icon="@drawable/foodbook"
            android:title="@string/cook_book"
            />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/shoppingcar"
            android:title="@string/product_list" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/pencil2"
            android:title="@string/my_favorite" />

    </group>

    <group
        android:id="@+id/planet_group_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_sub_third_fragment"
            android:icon="@drawable/aboutus"
            android:title="@string/aboutus" />

    </group>
</menu>